static/css/base.css
/* ... */
.StripeElement--webkit-autofill {
    background-color: #fefde5 !important;
}

.stripe-style-input::placeholder {
    color: #aab7c4;
}

.fieldset-label {
    position: relative;
    right: .5rem;
}

#payment-form .form-control,
#card-element {
    color: #000;
    border: 1px solid #000;
}

.a-inherit,
.a-inherit:hover {
    color: inherit;
    text-decoration: none;
}



/* Modal Cancel Subscription */
.modal-footer button {
    width: 100%;
}

.modal-content {
    background-color: #000814;
    border: 1px solid aliceblue;
}

.modal-header {
    background-color: #17a2b8;
    color: #000814;
}

.modal-footer,
.modal-body {
    background: #000814;
}
.renewSubscriptionModal button {
    margin-bottom: 5px;
}


/* Toast */
.toast {
    width: 280px;
    transition: transform 0.6s ease-in-out, opacity 0.6s;
    opacity: 0; 
    transform: translateX(110%);
    margin-top: 10px; 
}
.toast-container:first-child {
    margin-top:70px;
}
.toast-in {
    opacity: 1; 
    transform: translateX(0%); 
}
.toast-out {
    transform: translateX(110%); 
}
.btn-toast {
    background: #fca311 !important;
    border-radius: 5px !important;
    font-size: 90%;
    width: 30%;
    font-size: 15px !important;
    line-height: 30px !important;
}
.toast-body {
    background: #0d1b2a;
    min-height: 60px;
}

/* Footer */
.footer-container {
    margin-top:5vh;
}
.text-highlight {
    color: #00b4d8;
}
.footer-hr {
    border-top: 1px solid #8d99ae;
    width: 20px;
    float: left;
    }
.footer-element-container {
    min-height: 60vh;
    padding: 15px;
}
.footer-element-content {
    height:100%;
    position: relative;
    transition: background-color 0.3s; 
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%; 
    padding: 15px; 
}
.footer-element-content::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to top, #000814, #0d1b2a);
    opacity: 0;
    transition: opacity 0.3s;
    z-index: -1; 
}
.footer-element-content:hover::before {
    opacity: 1;
}
.footer-logo {
    font-family: 'Rubik Mono One',sans-serif;
    letter-spacing: normal;
}
.footer-logo a {
    display: block;
    transition: transform 0.3s ease-in-out;
}

.footer-logo a:hover {
    transform: translateX(10px);
}
.custom-divider {
    border: 0;
    height: 2px;
    background-color: #8d99ae;
    margin-top: 6px;
    margin-bottom: 6px;
    width: 30px;
    float: left;
}
.custom-footer-line {
    border: 0;
    height: 2px;
    background-color: #8d99ae;
    margin-top: 6px;
    margin-bottom: 6px;
    width: 250px;
    float: left;
}
.clear-both {
    clear: both; 
}
.footer-description {
    height:60px;
}
.developed-by-content {
    padding-left: 30px;
    font-size: 85%;
}


/*footer aligntment*/
.footer-absolute {
    position: absolute;
    left: 0;
    bottom: 0;
}
.footer-static {
    position: static;
}


/************************ Trade Insights *************************/
/* Trade Insights General */
.responsive-space {
    margin-top:20vh;
    margin-bottom:15vh;
}
.responsive-space-15 {
    margin-top:15vh;
    margin-bottom:15vh;
}
.responsive-space-10 {
    margin-top: 10vh;
    margin-bottom: 10vh;
}
.tradingview-widget-container {
    margin-top: 66px;
}

/* Trade Insights Main Stage */
.mainstage-insight {
    height:40vh;
    border-radius:3px;
    margin: 30px 0 30px;
}
.mainstage-row > div {
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    transition: all 1s ease;
}
.mainstage-insight .background-image, .secondstage-insight .background-image {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-size: cover;
    background-position: center;
    transition: filter 0.3s ease;
    z-index: -1; 
    border-radius: 4px;
}
.mainstage-insight .dark-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
    transition: background-color 0.8s ease; 
    z-index: 0; 
}
/*.mainstage-insight:hover .dark-overlay {
    background: rgba(0, 0, 0, 0.8); 
}*/
.mainstage-insight .mainstage-detail-container {
    position: relative;
    z-index: 2; 
}
.mainstage-release_date, .secondstage-release_date{
    font-size: 80%;
}
.mainstage-title, .secondstage-title{
    font-size: 120%;
    color: #00b4d8;
    font-weight: bold;
}
.mainstage-short_description, .secondstage-short_description{
    font-size:80%;
}
.hr {
    height:1px;
    background-color: white;
}
.hr-secondary {
    height: 1px;
    background-color: #8d99ae;
}
.category {
    height: 30px;
    min-width: 100px;
    border: 1px solid white;
    border-radius:15px;
    backdrop-filter: blur(10px);
    display:inline-block;
}
.category-small {
    font-size: 85%;
    height: 25px;
    min-width: 85px;
    border: 1px solid white;
    border-radius:12px;
    backdrop-filter: blur(10px);
    display:inline-block;
}

.category-ss {
    height: 30px;
    width: 100px;
    min-width: 100px;
    border: 1px solid white;
    border-radius:15px;
    backdrop-filter: blur(10px);
    display:inline-block;
    margin: 0 0 8px 8px;
}
.category-ss-small {
    height: 26px;
    width: 80%;
    min-width: 80%;
    border: 1px solid white;
    border-radius:13px;
    display:inline-block;
    margin: 0 0 8px 8px;
    font-size: 75%;
}

.read-more {
    font-size: 80%;
}
.mainstage-insight {
    position: relative;
    overflow: hidden; 
    box-shadow: 0 8px 6px -6px white;
}
.mainstage-detail-container {
    position: absolute;
    bottom: -23%; 
    left: 0;
    right: 0;
    transition: bottom 0.5s ease; 
}
.mainstage-insight:hover .mainstage-detail-container {
    bottom: 0; 
}
.ellipsis {
    overflow: hidden; 
    white-space: nowrap; 
    text-overflow: ellipsis; 
    max-width: 100%; 
    padding-right:2px;
}
/* ... */

